--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ base32 = "0.3.1"
 clap = "^2.29.0"
 oath = "0.10.2"
 rand = "0.4.1"
+rpassword = "2.0.0"
 serde = "1.0.24"
 serde_derive = "1.0.24"
 serde_json = "1.0.8"
