--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,20 @@
 [package]
 authors = ["German Lashevich <german.lashevich@gmail.com>"]
-name = "rustotpony"
-version = "0.1.0"
-
-description = "Manager of one-time password generators"
-homepage = "https://github.com/zebradil/rustotpony"
-repository = "https://github.com/zebradil/rustotpony"
-documentation = "https://github.com/zebradil/rustotpony"
-
-readme = "README.md"
 categories = ["command-line-utilities"]
+description = "Manager of one-time password generators"
+documentation = "https://github.com/zebradil/rustotpony"
+homepage = "https://github.com/zebradil/rustotpony"
 keywords = ["totp"]
 license = "MIT"
+name = "rustotpony"
+readme = "README.md"
+repository = "https://github.com/zebradil/rustotpony"
+version = "0.1.0"
 
 [dependencies]
 base32 = "0.3.1"
 clap = "^2.29.0"
+ctrlc = { version = "3.0", features = ["termination"] }
 keyring = "0.5.1"
 oath = "0.10.2"
 rand = "0.4.1"
@@ -23,9 +22,8 @@ rpassword = "2.0.0"
 serde = "1.0.24"
 serde_derive = "1.0.24"
 serde_json = "1.0.8"
-
 [profile.release]
-opt-level = 3
 debug = false
 lto = true
+opt-level = 3
 panic = "abort"
