--- a/.travis.yml
+++ b/.travis.yml
@@ -50,14 +50,14 @@ matrix:
     # - env: TARGET=powerpc64-unknown-linux-gnu
     # - env: TARGET=powerpc64le-unknown-linux-gnu
     # - env: TARGET=s390x-unknown-linux-gnu DISABLE_TESTS=1
-    - env: TARGET=x86_64-unknown-linux-gnu
+    # - env: TARGET=x86_64-unknown-linux-gnu
     # - env: TARGET=x86_64-unknown-linux-musl
 
     # OSX
     # - env: TARGET=i686-apple-darwin
     #   os: osx
-    - env: TARGET=x86_64-apple-darwin
-      os: osx
+    # - env: TARGET=x86_64-apple-darwin
+      # os: osx
 
     # *BSD
     # - env: TARGET=i686-unknown-freebsd DISABLE_TESTS=1
@@ -65,7 +65,7 @@ matrix:
     # - env: TARGET=x86_64-unknown-netbsd DISABLE_TESTS=1
 
     # Windows
-    - env: TARGET=x86_64-pc-windows-gnu
+    # - env: TARGET=x86_64-pc-windows-gnu
 
     # Bare metal
     # These targets don't support std and as such are likely not suitable for
@@ -80,6 +80,8 @@ matrix:
       rust: nightly
     - env: TARGET=x86_64-apple-darwin
       os: osx
+      rust: nightly
+    - env: TARGET=x86_64-pc-windows-gnu
       rust: nightly
 
 before_install:
