--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,11 +14,11 @@ environment:
   matrix:
     # MinGW
     # - TARGET: i686-pc-windows-gnu
-    - TARGET: x86_64-pc-windows-gnu
+    # - TARGET: x86_64-pc-windows-gnu
 
     # MSVC
     # - TARGET: i686-pc-windows-msvc
-    - TARGET: x86_64-pc-windows-msvc
+    # - TARGET: x86_64-pc-windows-msvc
 
     # Testing other channels
     - TARGET: x86_64-pc-windows-gnu
