--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ rust-crypto = "0.2.36"
 serde = "1.0.24"
 serde_derive = "1.0.24"
 serde_json = "1.0.8"
+dirs = "1.0.4"
 
 [dependencies.ctrlc]
 features = ["termination"]
