--- a/.github/workflows/upload-release-assets.yml
+++ b/.github/workflows/upload-release-assets.yml
@@ -35,6 +35,9 @@ jobs:
     - name: Build release
       run: cargo build --release
 
+    - name: List dir
+      run: ls -lr
+
     - name: Upload release asset
       uses: actions/upload-release-asset@v1.0.1
       env:
