Replace assets_url by upload_url

--- a/.github/workflows/upload-release-assets.yml
+++ b/.github/workflows/upload-release-assets.yml
@@ -48,7 +48,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ github.event.release.assets_url }}
+        upload_url: ${{ github.event.release.upload_url }}
         asset_path: ./target/release/totp
         asset_name: totp-${{ runner.OS }}
         asset_content_type: application/octet-stream
