--- a/.github/workflows/upload-release-assets.yml
+++ b/.github/workflows/upload-release-assets.yml
@@ -10,14 +10,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        # os: [ubuntu-latest, macos-latest, windows-latest]
-        os: [macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
-    - name: Print trigger
-      env:
-        GITHUB_CONTEXT: ${{ toJson(github) }}
-      run: echo "$GITHUB_CONTEXT"
     - name: Install latest stable rust toolchain
       if: matrix.os == 'macos-latest'
       uses: actions-rs/toolchain@v1
@@ -39,9 +34,6 @@ jobs:
 
     - name: Build release
       run: cargo build --release
-
-    - name: List dir
-      run: ls -lR
 
     - name: Upload release asset
       uses: zebradil/upload-release-asset@investigation
