--- a/.github/workflows/upload-release-assets.yml
+++ b/.github/workflows/upload-release-assets.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        # os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [windows-latest]
 
     steps:
     - name: Install latest stable rust toolchain
@@ -34,6 +35,9 @@ jobs:
 
     - name: Build release
       run: cargo build --release
+
+    - name: List dir
+      run: ls -lR
 
     - name: Upload release asset
       uses: zebradil/upload-release-asset@investigation
