--- a/.github/workflows/upload-release-assets.yml
+++ b/.github/workflows/upload-release-assets.yml
@@ -10,8 +10,17 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        # os: [ubuntu-latest, macos-latest, windows-latest]
-        os: [windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        include:
+        - os: windows-latest
+          asset_path: target\\release\\totp.exe
+          asset_name: totp-windows.exe
+        - os: macos-latest
+          asset_path: target/release/totp
+          asset_name: totp-macos
+        - os: ubuntu-latest
+          asset_path: target/release/totp
+          asset_name: totp-linux
 
     steps:
     - name: Install latest stable rust toolchain
@@ -36,15 +45,12 @@ jobs:
     - name: Build release
       run: cargo build --release
 
-    - name: List dir
-      run: dir /s
-
     - name: Upload release asset
       uses: actions/upload-release-asset@v1.0.1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ github.event.release.upload_url }}
-        asset_path: target\\release\\totp.exe
-        asset_name: totp-${{ runner.OS }}
+        asset_path: ${{ matrix.asset_path }}
+        asset_name: ${{ matrix.asset_name }}
         asset_content_type: application/octet-stream
