--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ version = "0.2.6"
 base32 = "0.4.0"
 clap = "^2.29.0"
 keyring = "0.7.1"
-oath = "0.10.2"
+totp-lite = "2.0.0"
 rand = "0.7"
 rpassword = "4.0"
 rust-crypto = "0.2.36"
