--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ base32 = "0.4.0"
 clap = "^2.29.0"
 keyring = "0.7.1"
 totp-lite = "2.0.0"
-rand = "0.7"
+rand = "^0.8.5"
 rpassword = "4.0"
 rust-crypto = "0.2.36"
 serde = "1.0.24"
