--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ clap = "^2.29.0"
 keyring = "0.7.1"
 totp-lite = "2.0.0"
 rand = "^0.8.5"
-rpassword = "4.0"
+rpassword = "^7.1.0"
 rust-crypto = "0.2.36"
 serde = "1.0.24"
 serde_derive = "1.0.24"
