--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ version = "0.2.6"
 [dependencies]
 base32 = "0.4.0"
 clap = "^2.29.0"
-keyring = "0.7.1"
+keyring = "^1.2.0"
 totp-lite = "2.0.0"
 rand = "^0.8.5"
 rpassword = "^7.1.0"
