--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ version = "0.2.6"
 
 [dependencies]
 base32 = "0.4.0"
-clap = "^2.29.0"
+clap = { version = "^4.0.15", features = ["derive"] }
 keyring = "^1.2.0"
 totp-lite = "2.0.0"
 rand = "^0.8.5"
