--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,23 +1,22 @@
-name: release
+---
+name: Release
 
 on:
   push:
     tags:
-    - '*'
+      - "*"
 
 jobs:
   release:
-    if: github.event.base_ref == 'refs/heads/master'
     name: Create release
     runs-on: ubuntu-latest
     steps:
-    - name: Create release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: false
-        prerelease: false
-
+      - name: Create release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
