--- a/.github/workflows/flow-push-main.yaml
+++ b/.github/workflows/flow-push-main.yaml
@@ -14,6 +14,15 @@ jobs:
         uses: actions/checkout@v4
       - name: Install rust toolchain
         uses: actions-rust-lang/setup-rust-toolchain@v1
+      - name: Cache target directory
+        uses: actions/cache@v2
+        with:
+          path: target
+          key: ${{ runner.OS }}-target-${{ github.ref }}-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.OS }}-target-${{ github.ref }}-
+            ${{ runner.OS }}-target-master-
+            ${{ runner.OS }}-target-
       - name: Cargo test
         run: cargo test --verbose
   build:
