chore(ci): make sure only one release job is running at the moment

--- a/.github/workflows/flow-push-main.yaml
+++ b/.github/workflows/flow-push-main.yaml
@@ -76,6 +76,8 @@ jobs:
           # The artifact is only needed for the current workflow run
           retention-days: 1
   release:
+    concurrency:
+      group: release
     needs:
       - build
     runs-on: ubuntu-latest
