chore(ci): fix artifacts directory name

--- a/.github/workflows/flow-push-main.yaml
+++ b/.github/workflows/flow-push-main.yaml
@@ -100,7 +100,7 @@ jobs:
         with:
           path: artifacts
       - name: List artifacts
-        run: find artifact
+        run: find artifacts
       - name: Semantic Release
         id: semantic
         uses: cycjimmy/semantic-release-action@v3
