--- a/.github/workflows/flow-push-main.yaml
+++ b/.github/workflows/flow-push-main.yaml
@@ -105,6 +105,7 @@ jobs:
         id: semantic
         uses: cycjimmy/semantic-release-action@v3
         env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.ZEBRADIL_BOT_GITHUB_TOKEN }}
           GIT_AUTHOR_NAME: Zebradli Bot
           GIT_AUTHOR_EMAIL: german.lashevich+github-zebradil-bot@gmail.com
@@ -113,3 +114,4 @@ jobs:
         with:
           extra_plugins: |
             @semantic-release/git
+            @semantic-release-cargo/semantic-release-cargo
