--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,15 +14,16 @@ version = "0.4.2"
 [dependencies]
 base32 = "0.5.1"
 clap = { version = "^4.5.16", features = ["derive"] }
+dirs = "^5.0.1"
 keyring = "^3.2.0"
-totp-lite = "2.0.1"
 rand = "^0.8.5"
 rpassword = "^7.3.1"
 rust-crypto = "0.2.36"
 serde = "1.0.209"
 serde_derive = "1.0.209"
 serde_json = "1.0.127"
-dirs = "^5.0.1"
+sha2 = "0.10.8"
+totp-lite = "2.0.1"
 
 [dependencies.ctrlc]
 features = ["termination"]
