Replace rpassword with promkit

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,8 @@ base32 = "0.5.1"
 clap = { version = "^4.5.16", features = ["derive"] }
 dirs = "^5.0.1"
 keyring = "^3.2.0"
+promkit = "0.4.5"
 rand = "^0.8.5"
-rpassword = "^7.3.1"
 rust-crypto = "0.2.36"
 serde = "1.0.209"
 serde_derive = "1.0.209"
