--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,26 +3,29 @@ authors = ["German Lashevich <german.lashevich@gmail.com>"]
 categories = ["command-line-utilities"]
 description = "Manager of one-time password generators"
 documentation = "https://github.com/zebradil/rustotpony"
+edition = "2021"
 homepage = "https://github.com/zebradil/rustotpony"
 keywords = ["totp"]
 license = "MIT"
 name = "rustotpony"
 readme = "README.md"
 repository = "https://github.com/zebradil/rustotpony"
-version = "0.4.2"
+version = "0.4.2"                                           # SED-HERE <- this is a marker for the version
 
 [dependencies]
-base32 = "0.4.0"
-clap = { version = "^4.5.1", features = ["derive"] }
-keyring = "^2.3.2"
-totp-lite = "2.0.1"
-rand = "^0.8.5"
-rpassword = "^7.3.1"
-rust-crypto = "0.2.36"
-serde = "1.0.197"
-serde_derive = "1.0.197"
-serde_json = "1.0.114"
+age = "0.10.0"
+base32 = "0.5.1"
+clap = { version = "^4.5.16", features = ["derive"] }
 dirs = "^5.0.1"
+keyring = "^3.2.0"
+promkit = "0.4.5"
+rand = "^0.8.5"
+rust-crypto = "0.2.36"
+serde = "1.0.209"
+serde_derive = "1.0.209"
+serde_json = "1.0.127"
+sha2 = "0.10.8"
+totp-lite = "2.0.1"
 
 [dependencies.ctrlc]
 features = ["termination"]
