--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -7,7 +7,10 @@ plugins:
     - prepareCmd: .github/scripts/update-cargo-version ${nextRelease.version}
   - "@semantic-release/release-notes-generator"
   - "@semantic-release/changelog"
-  - "@semantic-release/git"
+  - - "@semantic-release/git"
+    - assets:
+        - CHANGELOG.md
+        - Cargo.toml
   - - "@semantic-release/github"
     - assets:
         - path: artifacts/ubuntu-latest/totp
